[package]
name = "quikcov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
postcard = { version = "1.0", features = ["use-std"] }
quikcov-common = { version = "0.1", path = "../common" }
serde_json = "1.0"
os_pipe = "1.1"
command-fds = "0.2"
